# mpqp-lattice

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  README.md  closure_binary.m  example_data.mat  getCR.m  main.asv  main.cpp  main.h  main.m  minimal_sets.m  mpQP_test_2.mat
.devcontainer/: Dockerfile
include/Graph/: Graph.h
include/Lattice/: Lattice.h
include/eigen-cddlib/: Polyhedron.h
include/mpQP/: mpQP.h
src/Graph/: Graph.cpp
src/Lattice/: Lattice.cpp
src/eigen-cddlib/: Polyhedron.cpp
src/mpQP/: mpQP.cpp
